--- a/sesion08Entregable/app/src/main/AndroidManifest.xml
+++ b/sesion08Entregable/app/src/main/AndroidManifest.xml
@@ -31,11 +31,9 @@
             android:name=".GigantActivity"
             android:label="@string/gigante"
             android:parentActivityName=".MainActivity" />
-
-        <activity android:name=".PlayActivity"></activity>
-
-        <activity android:name=".RegisterActivity"></activity>
-
+        <activity android:name=".PlayActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".DataSavesDetailActivity"></activity>
     </application>
 
 </manifest>
