--- a/sesion08Entregable/app/src/main/AndroidManifest.xml
+++ b/sesion08Entregable/app/src/main/AndroidManifest.xml
@@ -33,9 +33,11 @@
             android:parentActivityName=".MainActivity" />
         <activity android:name=".PlayActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".DataSavesDetailActivity"
-            android:parentActivityName=".DataSavesActivity"
-            android:label="@string/detailsofsavedmatch"></activity>
+        <activity
+            android:name=".DataSavesDetailActivity"
+            android:label="@string/detailsofsavedmatch"
+            android:parentActivityName=".DataSavesActivity" />
+        <activity android:name=".CommanderActivity"></activity>
     </application>
 
 </manifest>
