--- a/sesion08Entregable/app/src/main/AndroidManifest.xml
+++ b/sesion08Entregable/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
+            android:label="@string/magiclifecounter"
             android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".NormalActivity"
